# mcpcodeanalysis

./: .dockerignore  .gitignore  .goosehints  .pre-commit-config.nix.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_RESOURCE_ANALYSIS.md  MCP_USABILITY_IMPROVEMENTS.md  Makefile  README.md  RESOURCE_IMPROVEMENTS.md  TOOL_DESCRIPTIONS_IMPROVEMENT.md  TOOL_TO_RESOURCE_MAPPING.md  alembic.ini  bandit-report.json  config.example.yaml  docker-compose-simple.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  enhancement.md  fix-unveiled-error-loop.yaml  flake.nix  justfile  mcp-server-briefing.md  mcp_tool_description_analysis.md  mkdocs.yml  pyproject.toml  settings.toml  vulture_whitelist.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docker/: README.md  backup.sh  entrypoint.sh  init-db.sql  nginx.conf  prometheus.yml
docs/: COMMIT_MSG_TPL.md  MULTI_LANGUAGE_SUPPORT.md  NIX_PRECOMMIT.md  advanced-analysis-tools.md  analysis-tools-summary.md  domain-driven-features.md  domain-example.md  index.md  migration-intelligence-api.md  migration-intelligence.md  migration-scenarios.md  refactoring_complex_methods.md
migrations/: add_missing_pattern_columns.sql
scripts/: ensure_embeddings.py  final_test.py  generate_embeddings.py  migrate-to-nix-precommit.sh  test_all_mcp_methods.py  test_find_usage_simple.py  test_fixed_methods.py  test_interpreted_embeddings.py  test_migration_analyzer.py  test_tool_registration.py  test_tools_simple.py
src/: __init__.py  config.py  logger.py  models.py
src/database/: __init__.py  domain_models.py  init_db.py  migration_models.py  models.py  package_models.py  package_repository.py  repositories.py  session_manager.py
src/database/migrations/: __init__.py  add_domain_models.sql  env.py
src/database/migrations/versions/: 15007d33f7f6_add_migration_intelligence_models_and_.py
src/domain/: __init__.py  entity_extractor.py  graph_builder.py  indexer.py  pattern_analyzer.py  summarizer.py
src/embeddings/: __init__.py  code_interpreter.py  domain_search.py  embedding_generator.py  embedding_service.py  openai_client.py  vector_search.py
src/indexer/: __init__.py  chunking.py  embeddings.py  interpreter.py  main.py
src/llm/: client.py
src/mcp_server/: __init__.py  __main__.py  config.py  main.py  resources_init.py  server.py
src/mcp_server/resources/: __init__.py  code_analysis.py  improved_code_analysis.py  migration_analysis.py  package_analysis.py  system.py
src/mcp_server/tools/: __init__.py  analysis_tools.py  analyze.py  code_analysis.py  code_search.py  domain_tools.py  execution_tools.py  explain.py  find.py  knowledge_tools.py  migration_tools.py  package_analysis.py  repository.py  repository_management.py  search.py  utils.py
src/parser/: __init__.py  base_parser.py  code_extractor.py  complexity_calculator.py  java_parser.py  javascript_parser.py  language_config.py  language_loader.py  language_plugin.py  parser_factory.py  php_parser.py  plugin_registry.py  python_parser.py  reference_analyzer.py  treesitter_parser.py  typescript_parser.py
src/parser/plugins/: __init__.py  java_plugin.py  javascript_plugin.py  php_plugin.py  python_plugin.py  typescript_plugin.py
src/query/: __init__.py  aggregator.py  ranking.py  search_engine.py  symbol_finder.py
src/scanner/: __init__.py  code_processor.py  file_watcher.py  git_sync.py  github_client.py  github_monitor.py  main.py  package_analyzer.py  repository_scanner.py
src/services/: __init__.py  interface_designer.py  migration_analyzer.py  migration_executor.py  migration_monitor.py  migration_planner.py  pattern_library.py
src/utils/: __init__.py  exceptions.py  health.py  logger.py  migration_performance.py  version.py
tests/: __init__.py  conftest.py  test_migration_benchmarks.py  test_migration_edge_cases.py  test_migration_integration.py  test_migration_simple.py  test_pattern_analyzer.py
tests/database/: test_session_manager.py
tests/domain/: test_context_relationships.py
tests/embeddings/: test_embedding_generator.py  test_openai_client.py  test_vector_search.py
tests/fixtures/: Sample.java  sample.php
tests/indexer/: test_chunking.py  test_embeddings.py  test_interpreter.py  test_main.py
tests/integration/: __init__.py  test_baseparser_interface.py  test_docker_mcp.py  test_language_plugins.py  test_mcp_e2e.py  test_mcp_resources.py  test_typescript_javascript_parsing.py
tests/mcp_server/: test_server.py  test_tools.py
tests/mcp_server/tools/: __init__.py  test_bounded_context_tools.py  test_dependency_tools.py  test_domain_analysis_tools.py  test_package_analysis_tools.py  test_refactoring_tools.py  test_repository_tools.py  test_similarity_tools.py  test_structure_tools.py  test_utils.py
tests/parser/: test_code_extractor.py  test_complexity_calculator.py  test_java_parser.py  test_language_config.py  test_parser_factory.py  test_parser_special_methods.py  test_php_parser.py  test_python_parser.py  test_reference_analyzer.py  test_treesitter_parser.py
tests/query/: test_aggregator.py  test_ranking.py  test_search_engine.py  test_symbol_finder.py
tests/scanner/: test_code_processor.py  test_git_sync.py  test_github_client.py  test_package_analyzer.py  test_parallel_processing.py  test_parallel_processing_simple.py  test_repository_scanner.py
tests/unit/: __init__.py  conftest.py  test_config.py  test_config_models.py  test_exceptions.py  test_health.py  test_logger.py  test_logger.py.disabled  test_models.py  test_typescript_parser_extraction.py
tests/utils/: test_version.py
todo/: PLUGIN_INITIALIZATION.md
